<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/date_b"
                android:textSize="40sp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@color/colorPrimaryDark"
                android:layout_weight="4"/>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="2">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/title_tod"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:layout_weight="1"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/title_pressure"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:layout_weight="1"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/title_temp"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:layout_weight="1"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/title_feel"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:layout_weight="1"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/title_humidity"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:layout_weight="1"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/title_wind"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:layout_weight="1"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/title_cloud"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:layout_weight="1"/>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/fullday_items">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>


    </LinearLayout>
</android.support.v7.widget.CardView>